# aws-adfs-gui

./: .gitignore  .pre-commit-config.yaml  README.md  cspell.json  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: layout-design.md
scripts/: setup.sh
src/aws_adfs/: __init__.py  adfs_auth.py  command_executor.py  config.py  main.py  models.py  web_app.py
src/aws_adfs_gui/: adfs_auth.py  aws_credentials.py  command_executor.py  config.py  main.py  models.py  secure_config.py  web_app.py
static/: app.js  index.html  styles.css  test_panel.html
tests/: __init__.py  test_adfs_auth.py  test_aws_credentials.py  test_command_executor.py  test_config.py  test_main.py  test_models.py  test_panel_functionality.html  test_secure_config.py  test_web_app.py  test_web_app_panel.py  test_web_app_welcome.py
